--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             <p>
                 Mám desetiletou zkušenost v oboru programování a designování, absolvoval jsem bakalářské studium na
                 <a href="https://www.inf.upol.cz/" target="blank">katedře informatiky</a> <a href="https://www.prf.upol.cz/" target="blank">
-                    Přírodovědecké fakulty UPOL</a> v oboru Aplikovaná informatika. V současnosti zde dokončuji i navazujicí
+                    Přírodovědecké fakulty UPOL</a> v oboru Aplikovaná informatika. V současnosti zde dokončuji i navazující
                 magisterské studium v oboru <a href="https://www.inf.upol.cz/pro-zajemce-o-studium/navazujici-magisterske-studium/vyvoj-software" target="blank">Vývoj software</a>.
             </p>
             <p>
-                Aktuálně jsem zaměstnaný ve společnosti <a href="https://tescosw.cz/" target="blank">TESCO SW a.s.</a> jako frontend programátor.
+                Aktuálně jsem zaměstnaný ve společnosti <a href="https://tescosw.cz/" target="blank">TESCO SW a.s.</a> jako programátor.
             </p>
 
         </article>
