--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="author" content="Ivo Šmerek">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="og:title" content="Římskokatolická farnost sv. Mořice Olomouc">
-    <meta property="og:description" content="Webové stránky římskokatolické farnosti svatého Mořice Olomouc.">
+    <meta property="og:title" content="Portfolio · Ivo Šmerek">
+    <meta property="og:description" content="Webová prezentace a portfolio.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://moric-olomouc.cz/static/moric_logo2.png">
-    <meta property="og:url" content="https://moric-olomouc.cz">
+    <meta property="og:image" content="https://www.smerivo.cz/static/images/profile.jpg">
+    <meta property="og:url" content="https://www.smerivo.cz">
 
-    <link rel="shortcut icon" href="/static/moric_logo.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/static/moric_logo2.png">
+    <link rel="shortcut icon" href="/static/images/profile.jpg">
+    <link rel="apple-touch-icon" sizes="152x152" href="/static/images/profile.jpg">
 
     <link rel="stylesheet" href="static/styles/styles.css">
     <link rel="stylesheet" href="static/GifLoader.js/src/css/loader.css">
