--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             <h1 class="text">smerivo.cz</h1>
         </div>
 
+        <img id="title-logo" src="static/images/logo.png" alt="smerivo.cz logo" onclick="scrollToTop();">
+
         <h2><span class="red">Programování,</span> <span class="yellow">design</span> &&nbsp;<span class="blue">další</span></h2>
     </div>
     <nav id="navbar">
@@ -47,7 +49,7 @@
             <div id="navbar-buttons">
                 <a href="#o-mne" class="active" onclick="scrollToId(this, 400)">O mně</a>
                 <a href="#moje-navrhy" onclick="scrollToId(this, 400)">Moje návrhy</a>
-                <a href="#dalsi-projekty" onclick="scrollToId(this, 600)">Další projekty</a>
+                <!--a href="#dalsi-projekty" onclick="scrollToId(this, 600)">Další projekty</a-->
             </div>
             <img id="navbar-logo" src="static/images/logo.png" alt="smerivo.cz logo" onclick="scrollToTop();">
         </div>
