Update text and image

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <p>
                 Mám desetiletou zkušenost v oboru programování a designování, absolvoval jsem bakalářské studium na
                 <a href="https://www.inf.upol.cz/" target="blank">katedře informatiky</a> <a href="https://www.prf.upol.cz/" target="blank">
-                    Přírodovědecké fakulty UPOL</a> v oboru Aplikovaná informatika. V současnosti zde dokončuji i navazující
+                Přírodovědecké fakulty UPOL</a> v oboru Aplikovaná informatika. V současnosti zde dokončuji i navazující
                 magisterské studium v oboru <a href="https://www.inf.upol.cz/pro-zajemce-o-studium/navazujici-magisterske-studium/vyvoj-software" target="blank">Vývoj software</a>.
             </p>
             <p>
@@ -81,14 +81,20 @@
                     </a>
                     <h4>Okno do praxe</h4>
                     <h5>Univerzita Palackého v Olomouci</h5>
+
                     <div class="tags">
                         <a href="https://www.python.org/" target="_blank">Python</a>
                         <a href="https://www.djangoproject.com/" target="_blank">Django</a>
                         <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a>
                         <a href="https://sass-lang.com/" target="_blank">SASS</a>
                     </div>
-                    <p>Okno do praxe je setkání zaměstnavatelů a studentů Univerzity Palackého v&nbsp;Olomouci.
-                        Jednalo se o kompletní redesign a přestavbu webu na novější technologie.</p>
+
+                    <p>
+                        Okno do praxe je setkání zaměstnavatelů a studentů Univerzity Palackého v&nbsp;Olomouci.
+                        Vytvořili jsme nový web a zahájili dlouhodobou spolupráci s&nbsp;<a href="https://kariernicentrum.upol.cz/" target="_blank">kariérním centrem UP</a>.
+                        Podílíme se na přípravě nových ročníků akce.
+                    </p>
+
                     <a href="https://www.oknodopraxe.upol.cz" target="_blank">www.oknodopraxe.upol.cz</a>
                 </div>
                 <div class="item">
@@ -97,6 +103,7 @@
                     </a>
                     <h4>Sv. Mořic Olomouc</h4>
                     <h5>Římskokatolická farnost svatého Mořice Olomouc</h5>
+
                     <div class="tags">
                         <a href="https://www.python.org/" target="_blank">Python</a>
                         <a href="https://www.djangoproject.com/" target="_blank">Django</a>
@@ -104,9 +111,13 @@
                         <a href="https://leafletjs.com/" target="_blank">Leaflet</a>
                         <a href="https://sass-lang.com/" target="_blank">SASS</a>
                     </div>
-                    <p>Opět se jednalo o redesign a přestavbu původního starého farního webu. Současně vznikl
+
+                    <p>
+                        Jednalo se o redesign a přestavbu původního starého farního webu na novější technologie. Současně vznikl
                         i <a href="https://www.varhany.moric-olomouc.cz" target="_blank">druhý web</a> pro Svatomořické varhany. Na tom je mimo jiné
-                    spuštěna aplikace pro adopci píšťal.</p>
+                        spuštěna aplikace pro adopci píšťal.
+                    </p>
+
                     <a href="https://www.moric-olomouc.cz" target="_blank">www.moric-olomouc.cz</a>
                 </div>
                 <div class="item">
@@ -115,15 +126,20 @@
                     </a>
                     <h4>Colidocs</h4>
                     <h5>Moje bakalářská práce</h5>
+
                     <div class="tags">
                         <a href="https://lisp-lang.org/" target="_blank">Common Lisp</a>
                         <a href="https://8arrow.org/caveman/" target="_blank">Caveman 2</a>
                         <a href="https://vincentgarreau.com/particles.js/" target="_blank">particles.js</a>
                         <a href="https://github.com/googlearchive/code-prettify" target="_blank">code-prettify</a>
                     </div>
-                    <p>Colidocs je fork původního projektu <a href="https://github.com/quickdocs/quickdocs-server">Quickdocs</a>
-                    s novým designem, přidaným přihlašováním uživatelů přes GitHub a možností vytvářet příklady použití jednotlivých
-                    symbolů jazyka.</p>
+
+                    <p>
+                        Colidocs je fork původního projektu <a href="https://github.com/quickdocs/quickdocs-server">Quickdocs</a>
+                        s novým designem, přidaným přihlašováním uživatelů přes GitHub a možností vytvářet příklady použití jednotlivých
+                        symbolů jazyka.
+                    </p>
+
                     <a href="http://colidocs.webly3d.net:5000" target="_blank">colidocs.webly3d.net:5000</a>
                 </div>
                 <div class="item">
@@ -132,14 +148,19 @@
                     </a>
                     <h4>Jedeme Online</h4>
                     <h5>Projekt Jedeme v tom společně</h5>
+
                     <div class="tags">
                         <a href="https://www.python.org/" target="_blank">Python</a>
                         <a href="https://flask.palletsprojects.com/" target="_blank">Flask</a>
                         <a href="https://sass-lang.com/" target="_blank">SCSS</a>
                     </div>
-                    <p>Webová aplikace již zaniklého projektu Jedeme v tom společně. Projekt
-                    měl za cíl aktivizovat seniory v domovech soutěživou formou společné fyzické aktivity
-                    - jízdy na rotopedech.</p>
+
+                    <p>
+                        Webová aplikace již zaniklého projektu Jedeme v tom společně. Projekt
+                        měl za cíl aktivizovat seniory v domovech soutěživou formou společné fyzické aktivity
+                        - jízdy na rotopedech.
+                    </p>
+
                     <a href="http://jedeme.webly3d.net/" target="_blank">jedeme.webly3d.net</a>
                 </div>
             </div>
