--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
             <img class="profile" src="static/images/profile.jpg" alt="Photo of me">
             <h3>Dobrý den, jmenuji se <span class="red uppercase bold">Ivo Šmerek</span>. Vítejte na mém portfoliu.</h3>
             <p>
-                Mám desetiletou zkušenost v oboru programování a designování, absolvoval jsem bakalářské studium na
+                Mám desetiletou zkušenost v oboru programování a designování, absolvoval jsem bakalářské i navazující magisterské studium na
                 <a href="https://www.inf.upol.cz/" target="blank">katedře informatiky</a> <a href="https://www.prf.upol.cz/" target="blank">
-                Přírodovědecké fakulty UPOL</a> v oboru Aplikovaná informatika. V současnosti zde dokončuji i navazující
-                magisterské studium v oboru <a href="https://www.inf.upol.cz/pro-zajemce-o-studium/navazujici-magisterske-studium/vyvoj-software" target="blank">Vývoj software</a>.
+                Přírodovědecké fakulty Univerzity Palackého</a> v oboru Aplikovaná informatika s odbornou specializací na <a href="https://www.inf.upol.cz/pro-zajemce-o-studium/navazujici-magisterske-studium/vyvoj-software" target="blank">vývoj softwaru</a>.
             </p>
             <p>
                 Aktuálně jsem zaměstnaný ve společnosti <a href="https://tescosw.cz/" target="blank">TESCO SW a.s.</a> jako programátor.
