Update header icons

--- a/index.html
+++ b/index.html
@@ -28,12 +28,16 @@
 
     <div class="white-wrapper">
         <div id="top-panel">
+            <a class="clickable-icon" href="https://www.linkedin.com/in/ivosmerek/" target="_blank" title="LinkedIn">
+                <img src="static/icons/linkedin.svg" alt="LinkedIn logo"></a>
             <a class="clickable-icon" href="https://www.github.com/BlueManCZ" target="_blank" title="GitHub">
                 <img src="static/icons/github.svg" alt="GitHub logo"></a>
-            <a class="clickable-icon" href="https://www.instagram.com/ivo.smerek/" target="_blank" title="Instagram">
-                <img src="static/icons/instagram.svg" alt="GitHub logo"></a>
             <a class="clickable-icon" href="https://t.me/BlueManCZ" target="_blank" title="Telegram">
                 <img src="static/icons/telegram.svg" alt="Telegram logo"></a>
+            <a class="clickable-icon" href="https://twitter.com/ivo_smerek" target="_blank" title="Twitter">
+                <img src="static/icons/twitter.svg" alt="Twitter logo"></a>
+            <a class="clickable-icon" href="https://www.instagram.com/ivo.smerek" target="_blank" title="Instagram">
+                <img src="static/icons/instagram.svg" alt="Instagram logo"></a>
         </div>
 
         <div id="title-background" class="image-container">
